--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body {
     background-color: #282727ee;
     height: 180px;
     opacity: 90;
+    width: 60%;
+    position: absolute;
+    left: 20%;
+    top: 10%;
+    border-radius: 50px;
 }
 
 .banner {
@@ -25,6 +30,11 @@ body {
 #digitalBanner {
  position: absolute;
  z-index: -1;
+}
+
+#nLogo {
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
 }
 
 .banner h1 {
@@ -46,15 +56,160 @@ body {
 
 .links a {
     position: relative;
-    left: 1000px;
-    bottom: 235px;
+    left: 370px;
+    bottom: 170px;
     margin: auto 15px;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 20px;
     color: white;
 }
 
+#img1 {
+    position: relative;
+    left: 290px;
+    bottom: 190px;
+}
+
+#img2 {
+    position: relative;
+    left: 270px;
+    bottom: 193px;
+}
+
+#img3 {
+    position: relative;
+    left: 290px;
+    bottom: 190px;
+}
+
 a:hover {
-    text-decoration: overline;
+    text-decoration: underline;
     color: teal;
+}
+
+#backgroundColor {
+    background-color: #282727ee;
+    height: 500px;
+    width: 900px;
+    position: absolute;
+    left: 20%;
+    top: 300px;  
+    border-radius: 40px;  
+}
+
+
+#main p {
+    color: #fff;
+    text-align: left;
+    width: 210px;
+    height: 400px;
+    font-size: 17px;
+    position: absolute;
+    left: 550px;
+    top: 290px;
+}
+
+#main aside {
+    color: #fff;
+    opacity: 70%;
+    position: absolute;
+    left: 320px;
+    top: 615px;
+}
+
+#betpic {
+    position: absolute;
+    left: 315px;
+    top: 310px;
+    border-radius: 40px;
+}
+
+.list {
+    position : relative;
+    left: 0px;
+    color: #fff;
+    margin: 60px 10px;
+    opacity: 100%;
+}
+
+.servicesList {
+    background-color: teal;
+    opacity: 60%;
+    display: inline-block;
+    border-radius: 20px;
+    position: absolute;
+    left: 1125px;
+}
+
+
+
+
+.openingSlide {
+    color: #fff;
+    text-align: center;
+    font-size: 100px;
+    background-color: teal;
+    margin-top: 50px;
+    height: 140px;
+    position: relative;
+    overflow: hidden;
+    animation: hideSlide 1s ease-out;
+    animation-delay: 5s;
+}   
+
+.openingSlide:active {
+    display: none;
+}
+
+
+.openingSlide p {
+    position: absolute;
+    left: 370px;
+    bottom: -348px;
+    animation: slideUp 5s ease-out;
+}
+
+@keyframes slideUp {
+    30% {
+        margin-bottom: 120px;
+    }
+    60% {
+        margin-bottom: 225px;
+    }
+    100% {
+        margin-bottom: 350px;
+    }
+}
+
+@keyframes hideSlide {
+    10% {
+        opacity: 90%;
+    }
+    20% {
+        opacity: 80%;
+    }
+    30% {
+        opacity: 70%;
+    }
+    40% {
+        opacity: 60%;
+    }
+    50% {
+        opacity: 50%;
+    }
+    60% {
+        opacity: 40%;
+    }
+    70% {
+        opacity: 30%;
+    }
+    80% {
+        opacity: 20%;
+    }
+    90% {
+        opacity: 10%;
+    }
+    100% {
+        opacity: 0%;
+    }
 }
